# hackaton

./: README.md  default.nix
contracts/: RobotLiabilityAPI.sol
frontend-pkg/: db.sqlite3  manage.py
frontend-pkg/chemistrysite/: wsgi.py
frontend-pkg/env/: pip-selfcheck.json
frontend-pkg/env/include/: python3.6m
frontend-pkg/env/lib/python3.6/: __future__.py  _bootlocale.py  _collections_abc.py  abc.py  (+47 more)
frontend-pkg/hackaton/: settings.py  urls.py
frontend-pkg/media/2018-04-24_02-19-58/: runparity.sh
frontend-pkg/media/2018-04-24_16-38-38/: lighthouse_addr
frontend-pkg/media/2018-05-18_13-57-38/: pass
frontend-pkg/media/2018-05-18_14-02-08/: lighthouse_addr
frontend-pkg/media/2018-05-22_22-04-25/: task.bag
frontend-pkg/media/2018-05-22_22-09-06/: genbag.py
frontend-pkg/media/2018-05-23_12-09-09/: Weaving_Needle.stl
frontend-pkg/media/2018-05-23_13-06-29/: main.stl
frontend-pkg/media/2018-05-23_13-53-16/: K270_foot.stl
frontend-pkg/static/js/: .app.js.swp  app.js  robonomics.min.js
frontend-pkg/uploadfile/: admin.py  models.py  urls.py  views.py
services-pkg/devel/: .catkin  .rosinstall  setup.sh
services-pkg/install/: env.sh
services-pkg/install/share/chemistry_services/: package.xml
services-pkg/install/share/chemistry_services/cmake/: chemistry_services-msg-extras.cmake  chemistry_servicesConfig.cmake
services-pkg/install/share/chemistry_services/launch/: services.launch
services-pkg/install/share/chemistry_services/srv/: PublishToBC.srv
services-pkg/src/: CMakeLists.txt
services-pkg/src/hackaton/: CMakeLists.txt  setup.py
(+31 files in other folders)
