<?xml version="1.0"?>
<package format="2">
  <name>chemistry_services</name>
  <version>0.1.0</version>
  <description>The chemistry-services package</description>
  <maintainer email="vadim.razorq@gmail.com">Vadim Manaenko</maintainer>
  <license>BSD</license>
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ask_bid_pkg</url> -->
  <author email="vadim.razorq@gmail.com">Vadim Manaenko</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
